<resources>
    <string name="app_name">Paotonet</string>
    <string name="title_activity_teacher_interface">TeacherInterface</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_teacher_login">TeacherLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fever_check">I measured my child\'s fever near his exit to the educational institution, and it was found that his body temperature was below 38 degrees Celsius.</string>
    <string name="cough_check">My child does not cough and has no breathing difficulties, except for a cough or difficulty breathing due to a chronic condition such as asthma or allergy. For this purpose, rhinitis alone will not be considered a symptom.</string>
    <string name="taste_check">To the best of my knowledge, my child have no change in their sense of taste or smell.</string>
    <string name="contact_check">To the best of my knowledge my child has not been in close contact with a COVID-19 patient in the last two weeks.</string>
    <string name="isolation_check">My child has not been in the last 14 days in a country whose returnees are committed to isolation.</string>
    <string name="declaration_explain">Please fill in the details and sign the health statement.</string>
</resources>